--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -15,6 +15,7 @@
   "radhikaAbout": "Registered Student learning Indian Classical Vocals.",
   "mlAbout": "Founder and Mentor with years of experience in Indian and Western music.",
   "harshAbout": "Technical and Editorial Support for Swaranjali Music Classes.",
+  "narendraAbout": "Mentor with years of experience in Indian and Western music.",
   "address": "123 Swaranjali Lane, Kolkata, WB, India",
   "phone": "+91 98765 43210",
   "whatsapp": "+91 98765 43210",
