update on family and images

--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -14,9 +14,12 @@
   "familyTitle": "Our Family",
   "radhikaAbout": "Mentor with years of experience in Indian Classical Vocals.",
   "mlAbout": "Founder and Mentor with years of experience in Indian and Western music.",
-  "harshAbout": "Technical and Editorial Support for Swaranjali Music Classes.",
+  "harshAbout": "Mentor, Technical and Editorial Support for Swaranjali Music Classes.",
   "address": "77, Tilak Nagar, Pratapgarh, Rajasthan Pin - 312605, Rajasthan, India",
   "phone": "+91 78912 45563",
   "whatsapp": "+91 92844 39427",
   "googleMapsEmbed": "https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1034996.229765672!2d74.24399841385708!3d24.140400086134882!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3966892547bc33eb%3A0x17419ae6402bfe3d!2sSwaranjali%20Music%20Classes!5e1!3m2!1sen!2sin!4v1759730574119!5m2!1sen!2sin"
+  ,
+  "deepakAbout": "Co-Founder and mentor with expertise in instrumental accompaniment, vocal coaching & Visionary Educator.",
+  "narendraAbout": "Mentor specializing in Indian & western Rhythm's."
 }
