--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -14,8 +14,9 @@
   "familyTitle": "Our Family",
   "radhikaAbout": "Registered Student learning Indian Classical Vocals.",
   "mlAbout": "Founder and Mentor with years of experience in Indian and Western music.",
-  "harshAbout": "Technical and Editorial Support for Swaranjali Music Classes.",
-  "narendraAbout": "Mentor with years of experience in Indian and Western music.",
+  "deepakAbout": "Mentor with years of experience in Indian and Western music.",
+  "harshAbout": "Mentor, Technical and Editorial Support for Swaranjali Music Classes.",
+  "narendraAbout": "Mentor with years of experience in Indian and Western Rhythm's.",
   "address": "123 Swaranjali Lane, Kolkata, WB, India",
   "phone": "+91 98765 43210",
   "whatsapp": "+91 98765 43210",
