--- a/locales/hi/translation.json
+++ b/locales/hi/translation.json
@@ -14,7 +14,9 @@
   "familyTitle": "हमारा परिवार",
   "radhikaAbout": "भारतीय शास्त्रीय गायन की पंजीकृत छात्रा।",
   "mlAbout": "संस्थापक और मार्गदर्शक — भारतीय और पश्चिमी संगीत में वर्षों का अनुभव।",
-  "harshAbout": "स्वरांजली म्यूज़िक क्लासेस के लिए तकनीकी और संपादकीय सहयोग।",
+  "harshAbout": "स्वरांजली म्यूज़िक क्लासेस के लिए मार्गदर्शक, तकनीकी और संपादकीय सहयोग।",
+  "deepakAbout": "भारतीय और पश्चिमी संगीत में वर्षों का अनुभव रखने वाले मेंटर।",
+  "narendraAbout": "भारतीय और पश्चिमी ताल में वर्षों का अनुभव रखने वाले मेंटर।",
   "address": "123 स्वरांजली लेन, कोलकाता, पश्चिम बंगाल, भारत",
   "phone": "+91 98765 43210",
   "whatsapp": "+91 98765 43210",
