--- a/src/locales/hi/translation.json
+++ b/src/locales/hi/translation.json
@@ -15,4 +15,7 @@
   "radhikaAbout": "भारतीय शास्त्रीय गायन की पंजीकृत छात्रा।",
   "mlAbout": "संस्थापक और मार्गदर्शक — भारतीय और पश्चिमी संगीत में वर्षों का अनुभव।",
   "harshAbout": "स्वरांजली म्यूज़िक क्लासेस के लिए तकनीकी और संपादकीय सहयोग।"
+  ,
+  "deepakAbout": "सह-संस्थापक और मेंटर — वाद्य संगत और वोकल मार्गदर्शन में विशेषज्ञ।",
+  "narendraAbout": "मेंटर — भारतीय और पश्चिमी ताल में विशेषज्ञ।"
   }
